<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/customToolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="?attr/colorPrimary"
    app:contentInsetStart="0dp"
    app:contentInsetStartWithNavigation="0dp">

    <!-- Custom toolbar content -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/headingName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:padding="8dp"
            android:text="Supermarket"
            android:textStyle="italic|bold"
            android:textColor="@color/green_head"
            android:textSize="30sp"
              />



        <!-- Location Icon -->
        <ImageView
            android:id="@+id/locationIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@id/locationName"
            android:src="@drawable/location"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/locationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:textStyle="bold"
            android:layout_toStartOf="@id/saerchIcon"
            android:textColor="@color/green_toolbar_texts"
            android:text="@string/location"
            android:textSize="18sp" />



        <!-- Search Icon -->
        <ImageView
            android:id="@+id/saerchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@id/searchName"
            android:src="@drawable/search"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/searchName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"
            android:textColor="@color/green_toolbar_texts"
            android:textSize="18sp"
            android:layout_toStartOf="@id/discountIcon"
            android:text="@string/search"
              />

        <!-- Discount Icon -->
        <ImageView
            android:id="@+id/discountIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@id/discountText"
            android:src="@drawable/discount"
            android:textSize="16sp" />



        <TextView
            android:id="@+id/discountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/helpIcon"
            android:textStyle="bold"
            android:textColor="@color/green_toolbar_texts"
            android:textSize="18sp"
            android:text="@string/discount" />

        <!-- Search Text -->
        <ImageView
            android:id="@+id/helpIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@id/helpText"
            android:src="@drawable/help"
            android:textSize="16sp" />

        <!-- Help Icon -->
        <TextView
            android:id="@+id/helpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="Help"
            android:textStyle="bold"
            android:textColor="@color/green_toolbar_texts"
            android:textSize="18sp"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/menuIcon"
              />

        <!-- Help Text -->
        <ImageView
            android:id="@+id/menuIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:src="@drawable/menu"
            android:textSize="16sp" />


    </RelativeLayout>

</androidx.appcompat.widget.Toolbar>
